style changes on about mobile. Make buttons on mobile and desktop versions of site change the same state variables to ensure place is not lost when switching between about sections

--- a/src/style/MiniAbout.css
+++ b/src/style/MiniAbout.css
@@ -44,16 +44,19 @@
 
 .sm-about-content {
   grid-area: newRow;
-  overflow: auto;
+  overflow-y: auto;
   display: grid;
   position: relative;
   /* display: flex; */
   height: 100%;
   width: 100%;
+  /* background: red; */
+  /* overflow: hidden; */
 }
 
 .sm-ac-left {
   position: relative;
+  /* overflow: hidden; */
 }
 .sm-ac-right-dashes {
   /* border-left: 3px var(--primaryBlack) dashed; */
@@ -64,7 +67,11 @@
 
 .sm-ac-wrapper {
   position: relative;
+  /* overflow: hidden; */
+  height: 100%;
 }
+
+
 
 .go-sm-button {
   position: relative;
@@ -488,8 +495,8 @@
   justify-content: center;
   align-items: center;
   border-left: 4px var(--primaryDark) dashed;
-  margin-top: 7.5%;
-  margin-bottom: 7.5%;
+  margin-top: clamp(1px, 7.5%, 15px);
+  margin-bottom: clamp(1px, 7.5%, 15px);
   /* background-color: red; */
 }
 
@@ -669,8 +676,8 @@
   align-items: center;
   background-color: var(--primaryBlack);
   border: 3px var(--primaryLight) solid;
-  margin-top: 7.5%;
-  margin-bottom: 7.5%;
+  margin-top: clamp(1px, 7.5%, 30px);
+  margin-bottom: clamp(1px, 7.5%, 30px);
 }
 
 .sm-fresh-photo {
@@ -724,11 +731,14 @@
 .sm-go-forth-btn {
   font-family: courierPrime;
   position: absolute;
-  width: 20%;
-  height: 25%;
+  width: 100%;
+  height: 100%;
   right: 0;
-  top: 50%;
-  background-color: var(--primaryBlack);
+  top: 0;
+  top: 0;
+  /* transform: translateY(15%); */
+  /* background-color: var(--primaryBlack); */
+  background: transparent;
   border: none;
   display: flex;
   flex-direction: column;
@@ -742,15 +752,21 @@
 
 .go-btn-img-container {
   display: flex;
+  /* flex-direction: column; */
   width: 100%;
   height: 100%;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
 
+.go-arrow-wrapper {
+  flex: 1;
+}
+
 .go-btn-arrow {
-  filter: invert(.9);
-  width: 30%;
+  /* filter: invert(.9); */
+  filter: invert(.15);
+  width: 80%;
 }
 
 /* 
